# SPDX-FileCopyrightText: Copyright 2023 Gloria G.
# SPDX-License-Identifier: BSD-2-Clause

[package]
name = "cell_module_shell"
description = "Cell - Shell Module"
version = "1.0.0"
edition = "2021"
authors = ["Gloria G."]

[lib]
path = "Sources/mod.rs"

[dependencies]
cell_core = { path = "../../Core" }
cell_module_vulkan = { path = "../Vulkan" }

bitflags = "2.4.1"
